--- a/PlanerSimulation_ProcessInteraction/Views/LSearchView.xaml
+++ b/PlanerSimulation_ProcessInteraction/Views/LSearchView.xaml
@@ -11,13 +11,6 @@
         <Style x:Key="NumericAxisLabelStyle" TargetType="{x:Type chartingToolkit:NumericAxisLabel}">
             <Setter Property="IsTabStop" Value="False" />
             <Setter Property="StringFormat" Value="" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type chartingToolkit:NumericAxisLabel}">
-                        <TextBlock Text="{TemplateBinding FormattedContent}" />
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
         </Style>
         
         <Style x:Key="@DataPointStyle" TargetType="chartingToolkit:BarDataPoint">
@@ -37,7 +30,7 @@
     </UserControl.Resources>
 
     <Grid>
-        <chartingToolkit:Chart Height="600" Width="900" BorderThickness="0" Title="CPU Await Time" VerticalAlignment="Bottom" >
+        <chartingToolkit:Chart Height="600" Width="900" BorderThickness="0" Title="CPU Await Time" VerticalAlignment="Bottom">
             <chartingToolkit:Chart.Axes>
                 <chartingToolkit:LinearAxis Title="Time [ms]" Orientation="X" ShowGridLines="True" Height="40"  />
                 <chartingToolkit:LinearAxis Title="Lambda"  Width="30" Orientation="Y" AxisLabelStyle="{StaticResource NumericAxisLabelStyle}" />
@@ -47,18 +40,15 @@
                     <Setter Property="Width" Value="0" />
                 </Style>
             </chartingToolkit:Chart.LegendStyle>
-            <chartingToolkit:BarSeries DependentValuePath="Val.CPUAwaitTime" IndependentValuePath="Key" Title="aaa" ItemsSource="{Binding ResultsList}"
-                                       IsSelectionEnabled="False" DataPointStyle="{StaticResource @DataPointStyle}" >
-                
-            </chartingToolkit:BarSeries>
+            <chartingToolkit:BarSeries DependentValuePath="Val.CPUAwaitTime" IndependentValuePath="Key" ItemsSource="{Binding ResultsList}"
+                                       IsSelectionEnabled="False" DataPointStyle="{StaticResource @DataPointStyle}" />
 
-            <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[0]}" DependentValuePath="Key" IndependentValuePath="Val" IsSelectionEnabled="False" DependentRangeAxis="{Binding ElementName=MyCategoryAxis}">
-            </chartingToolkit:LineSeries>
-            <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[1]}"  DependentValuePath="Key" IndependentValuePath="Val" IsSelectionEnabled="False" DependentRangeAxis="{Binding ElementName=MyCategoryAxis}" />
-            <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[2]}"  DependentValuePath="Key" IndependentValuePath="Val" IsSelectionEnabled="False" DependentRangeAxis="{Binding ElementName=MyCategoryAxis}" />
-            <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[3]}"  DependentValuePath="Key" IndependentValuePath="Val" IsSelectionEnabled="False" DependentRangeAxis="{Binding ElementName=MyCategoryAxis}" />
-            <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[4]}"  DependentValuePath="Key" IndependentValuePath="Val" IsSelectionEnabled="False" DependentRangeAxis="{Binding ElementName=MyCategoryAxis}" />
-
+            <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[0]}" DependentValuePath="Key" IndependentValuePath="Val"
+                                        IsSelectionEnabled="False" DependentRangeAxis="{Binding ElementName=MyCategoryAxis}"/>
+             <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[1]}"  DependentValuePath="Key" IndependentValuePath="Val" />
+            <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[2]}"  DependentValuePath="Key" IndependentValuePath="Val" />
+            <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[3]}"  DependentValuePath="Key" IndependentValuePath="Val" />
+            <chartingToolkit:LineSeries ItemsSource="{Binding ConfidenceInterval[4]}"  DependentValuePath="Key" IndependentValuePath="Val" />
         </chartingToolkit:Chart>
     </Grid>
 </UserControl>
