--- a/PlanerSimulation_ProcessInteraction/Views/NormalView.xaml
+++ b/PlanerSimulation_ProcessInteraction/Views/NormalView.xaml
@@ -61,11 +61,11 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Column="0" Content="Lambda: " />
-                <Slider Grid.Column="1" Value="{Binding Lambda}" Minimum="0.001" Maximum="0.05" TickFrequency="0.000001" IsSnapToTickEnabled="True" LargeChange="0.000001" />
+                <Slider Grid.Column="1" Value="{Binding Lambda}" Minimum="0.001" Maximum="0.05" TickFrequency="0.00001" IsSnapToTickEnabled="True" LargeChange="0.00001" />
                 <Label Grid.Column="2" Content="{Binding Lambda}" />
 
                 <Label Grid.Column="0" Grid.Row="1" Content="Lambda Span: " />
-                <Slider Grid.Column="1" Grid.Row="1" Value="{Binding LambdaSpan}" Minimum="0.000000001" Maximum="0.005" TickFrequency="0.000000001" LargeChange="0.000000001" />
+                <Slider Grid.Column="1" Grid.Row="1" Value="{Binding LambdaSpan}" Minimum="0.000001" Maximum="0.001" TickFrequency="0.000001" IsSnapToTickEnabled="True" LargeChange="0.000001" />
                 <Label Grid.Column="2" Grid.Row="1" Content="{Binding LambdaSpan}" />
             </Grid>
 
